--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #pix_value{
@@ -28,6 +31,8 @@ body{
     flex-direction: column; 
     align-items: center; 
     border: solid 1px; border-radius: 10px;
+    width: 40%;
+    padding: 30px;
 }
 
 #copy_payload_button{
